--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -23,39 +23,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
-                android:id="@+id/weather_descrpt_lay"
+
+            <TextView
+                android:id="@+id/weather_descrpt"
                 android:layout_width="wrap_content"
-                android:layout_marginTop="24dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:orientation="horizontal">
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="34dp"
+                android:text="Moderate Rain"
+                android:textColor="#7296AB"
+                android:textSize="20dp" />
 
-                <ImageView
-                    android:id="@+id/weather_image"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:id="@+id/weather_descrpt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="10dp"
-                    android:text="Modarate Rain"
-                    android:textSize="18dp" />
-
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/weather_temp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/weather_descrpt_lay"
+                android:layout_below="@id/weather_descrpt"
                 android:layout_centerHorizontal="true"
                 android:text="2°C"
+                android:textColor="#7296AB"
                 android:textSize="60dp" />
 
             <TextView
@@ -68,34 +56,30 @@
                 android:textSize="18dp" />
 
 
-            <LinearLayout
-                android:id="@+id/rain_lay"
+            <ImageView
+                android:id="@+id/rain_image"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginTop="8dp"
+                android:layout_below="@id/weather_feels"
+                android:layout_toStartOf="@id/rain_chance"
+                android:src="@drawable/ic_umbrella" />
+
+            <TextView
+                android:id="@+id/rain_chance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_below="@id/weather_feels"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal">
+                android:text="40%"
+                android:textSize="20dp" />
 
-                <ImageView
-                    android:id="@+id/rain_image"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:background="@color/black" />
-
-                <TextView
-                    android:id="@+id/rain_chance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="40%"
-                    android:textSize="20dp" />
-            </LinearLayout>
             <LinearLayout
                 android:id="@+id/wind_lay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/rain_lay"
+                android:layout_below="@id/rain_chance"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
@@ -103,8 +87,9 @@
                 <ImageView
                     android:id="@+id/wind_image"
                     android:layout_width="28dp"
+                    android:src="@drawable/ic_wind"
                     android:layout_height="28dp"
-                    android:background="@color/black" />
+                     />
 
                 <TextView
                     android:id="@+id/wind_speed"
@@ -116,63 +101,71 @@
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/sum_hour_day_lay"
+                android:id="@+id/sum_hour_day_rv"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@id/wind_lay">
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvForecast"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
 
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/sun_moon_lay"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_below="@+id/sum_hour_day_lay"
+                android:layout_height="90dp"
+                android:layout_marginTop="4dp"
+                android:layout_below="@+id/sum_hour_day_rv"
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:text="SUN"
-                            android:textSize="30dp" />
 
-                        <TextView
-                            android:id="@+id/sun_time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="60dp"
-                            android:text="11h 24m"
-                            android:textSize="16dp" />
+                        <ImageView
+                            android:id="@+id/sunrise_img"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="16dp"
+                            android:src="@drawable/ic_sunrise" />
 
                         <TextView
                             android:id="@+id/sunrise_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="4dp"
-                            android:layout_marginTop="90dp"
-                            android:text="6:27"
+                            android:layout_marginStart="6dp"
+                            android:layout_marginTop="16dp"
+                            android:layout_toEndOf="@id/sunrise_img"
+                            android:text="Sunrise 05:19"
                             android:textSize="16dp" />
+
+                        <ImageView
+                            android:id="@+id/sunset_img"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="48dp"
+                            android:src="@drawable/ic_sunset" />
 
                         <TextView
                             android:id="@+id/sunset_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginTop="90dp"
-                            android:layout_marginEnd="4dp"
-                            android:text="7:24"
+                            android:layout_marginStart="6dp"
+                            android:layout_marginTop="46dp"
+                            android:layout_toEndOf="@id/sunset_img"
+                            android:text="Sunset 20:41"
                             android:textSize="16dp" />
 
 
@@ -184,45 +177,48 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:text="MOON"
-                            android:textSize="30dp" />
 
-                        <TextView
-                            android:id="@+id/moon_time"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerHorizontal="true"
-                            android:layout_marginTop="60dp"
-                            android:text="11h 24m"
-                            android:textSize="16dp" />
+                        <ImageView
+                            android:id="@+id/moonrise_img"
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="8dp"
+                            android:src="@drawable/ic_moonrise" />
 
                         <TextView
                             android:id="@+id/moonrise_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="4dp"
-                            android:layout_marginTop="90dp"
-                            android:text="6:27"
+                            android:layout_marginTop="16dp"
+                            android:layout_toEndOf="@id/moonrise_img"
+                            android:text="Moonrise 20:58"
                             android:textSize="16dp" />
+
+                        <ImageView
+                            android:id="@+id/moonset_img"
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="40dp"
+                            android:src="@drawable/ic_moonset" />
 
                         <TextView
                             android:id="@+id/moonset_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginTop="90dp"
-                            android:layout_marginEnd="4dp"
-                            android:text="7:24"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="46dp"
+                            android:layout_toEndOf="@id/moonset_img"
+                            android:text="Moonset 06:46"
                             android:textSize="16dp" />
 
                     </RelativeLayout>
@@ -241,6 +237,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
@@ -253,7 +250,7 @@
                             android:layout_height="24dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="4dp"
-                            android:background="@color/black" />
+                            android:src="@drawable/ic_pressure" />
 
                         <TextView
                             android:id="@+id/pressure_descr"
@@ -279,6 +276,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
@@ -291,7 +289,7 @@
                             android:layout_height="24dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="4dp"
-                            android:background="@color/black" />
+                            android:src="@drawable/ic_humidity" />
 
                         <TextView
                             android:id="@+id/humidity_descr"
@@ -316,6 +314,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
@@ -328,7 +327,7 @@
                             android:layout_height="24dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="4dp"
-                            android:background="@color/black" />
+                            android:src="@drawable/ic_eye" />
 
                         <TextView
                             android:id="@+id/visibility_descr"
@@ -361,6 +360,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
@@ -373,7 +373,7 @@
                             android:layout_height="24dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="4dp"
-                            android:background="@color/black" />
+                            android:src="@drawable/ic_cloud" />
 
                         <TextView
                             android:id="@+id/clouds_descr"
@@ -381,7 +381,7 @@
                             android:layout_height="wrap_content"
                             android:layout_below="@id/clouds_img"
                             android:layout_centerHorizontal="true"
-                            android:text="Visibility" />
+                            android:text="Clouds" />
 
                         <TextView
                             android:id="@+id/clouds_text"
@@ -398,6 +398,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
@@ -410,7 +411,7 @@
                             android:layout_height="24dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="4dp"
-                            android:background="@color/black" />
+                            android:src="@drawable/ic_air_quality" />
 
                         <TextView
                             android:id="@+id/aq_index_descr"
@@ -421,7 +422,7 @@
                             android:text="Air Quality" />
 
                         <TextView
-                            android:id="@+id/uv_index_text"
+                            android:id="@+id/aq_index_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/aq_index_descr"
@@ -435,6 +436,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="4dp"
                     android:layout_weight="1">
 
                     <RelativeLayout
@@ -447,7 +449,7 @@
                             android:layout_height="24dp"
                             android:layout_centerHorizontal="true"
                             android:layout_marginTop="4dp"
-                            android:background="@color/black" />
+                            android:src="@drawable/ic_dew_point" />
 
                         <TextView
                             android:id="@+id/dew_point_descr"
