--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCities"
@@ -60,8 +60,8 @@
                 android:id="@+id/rain_image"
                 android:layout_width="28dp"
                 android:layout_height="28dp"
-                android:layout_marginTop="8dp"
                 android:layout_below="@id/weather_feels"
+                android:layout_marginTop="8dp"
                 android:layout_toStartOf="@id/rain_chance"
                 android:src="@drawable/ic_umbrella" />
 
@@ -69,9 +69,9 @@
                 android:id="@+id/rain_chance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:layout_below="@id/weather_feels"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="8dp"
                 android:text="40%"
                 android:textSize="20dp" />
 
@@ -87,9 +87,8 @@
                 <ImageView
                     android:id="@+id/wind_image"
                     android:layout_width="28dp"
-                    android:src="@drawable/ic_wind"
                     android:layout_height="28dp"
-                     />
+                    android:src="@drawable/ic_wind" />
 
                 <TextView
                     android:id="@+id/wind_speed"
@@ -100,25 +99,21 @@
                     android:textSize="20dp" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/sum_hour_day_rv"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvForecast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/wind_lay">
+                android:layout_marginVertical="16dp"
+                android:layout_below="@id/wind_lay" />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvForecast"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/sun_moon_lay"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
+                android:layout_below="@+id/rvForecast"
                 android:layout_marginTop="4dp"
-                android:layout_below="@+id/sum_hour_day_rv"
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
@@ -136,7 +131,7 @@
                             android:id="@+id/sunrise_img"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:layout_marginStart="4dp"
+                            android:layout_marginStart="8dp"
                             android:layout_marginTop="16dp"
                             android:src="@drawable/ic_sunrise" />
 
@@ -154,7 +149,7 @@
                             android:id="@+id/sunset_img"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:layout_marginStart="4dp"
+                            android:layout_marginStart="8dp"
                             android:layout_marginTop="48dp"
                             android:src="@drawable/ic_sunset" />
 
