--- a/app/src/main/res/layout/cities_search_fragment.xml
+++ b/app/src/main/res/layout/cities_search_fragment.xml
@@ -7,8 +7,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:hint="Insert city name"
+        android:layout_marginHorizontal="12dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         />
