--- a/app/src/main/res/layout/city_fragment.xml
+++ b/app/src/main/res/layout/city_fragment.xml
@@ -1,39 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCities"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/rvCities"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true">
+        <ProgressBar
+            android:id="@+id/pbWeather"
+            style="?attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <RelativeLayout
+            android:id="@+id/statsHide"
+            android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
 
             <TextView
+                android:id="@+id/tvCity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="8dp"
+                android:layout_toStartOf="@id/ivFav"
+                android:text="Bishkek"
+                android:textSize="33sp" />
+
+            <ImageView
+                android:id="@+id/ivFav"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+
+                android:src="@drawable/ic_favorite_selected" />
+
+            <TextView
                 android:id="@+id/weather_descrpt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/tvCity"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="34dp"
+                android:layout_marginTop="20dp"
                 android:text="Moderate Rain"
                 android:textColor="#7296AB"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
 
             <TextView
@@ -44,7 +69,7 @@
                 android:layout_centerHorizontal="true"
                 android:text="2°C"
                 android:textColor="#7296AB"
-                android:textSize="60dp" />
+                android:textSize="60sp" />
 
             <TextView
                 android:id="@+id/weather_feels"
@@ -53,7 +78,7 @@
                 android:layout_below="@id/weather_temp"
                 android:layout_centerHorizontal="true"
                 android:text="feels like -2°"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
 
             <ImageView
@@ -73,7 +98,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:text="40%"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:id="@+id/wind_lay"
@@ -96,7 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:text="7.5km/h"
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
             </LinearLayout>
 
 
@@ -104,8 +129,8 @@
                 android:id="@+id/rvForecast"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="16dp"
-                android:layout_below="@id/wind_lay" />
+                android:layout_below="@id/wind_lay"
+                android:layout_marginVertical="16dp" />
 
 
             <LinearLayout
@@ -143,7 +168,7 @@
                             android:layout_marginTop="16dp"
                             android:layout_toEndOf="@id/sunrise_img"
                             android:text="Sunrise 05:19"
-                            android:textSize="16dp" />
+                            android:textSize="16sp" />
 
                         <ImageView
                             android:id="@+id/sunset_img"
@@ -161,7 +186,7 @@
                             android:layout_marginTop="46dp"
                             android:layout_toEndOf="@id/sunset_img"
                             android:text="Sunset 20:41"
-                            android:textSize="16dp" />
+                            android:textSize="16sp" />
 
 
                     </RelativeLayout>
@@ -196,7 +221,7 @@
                             android:layout_marginTop="16dp"
                             android:layout_toEndOf="@id/moonrise_img"
                             android:text="Moonrise 20:58"
-                            android:textSize="16dp" />
+                            android:textSize="16sp" />
 
                         <ImageView
                             android:id="@+id/moonset_img"
@@ -214,7 +239,7 @@
                             android:layout_marginTop="46dp"
                             android:layout_toEndOf="@id/moonset_img"
                             android:text="Moonset 06:46"
-                            android:textSize="16dp" />
+                            android:textSize="16sp" />
 
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
@@ -469,6 +494,6 @@
 
 
         </RelativeLayout>
-    </ScrollView>
 
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
