--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="@drawable/border"
+    android:layout_height="55dp">
 
     <TextView
-        android:id="@+id/tvCityName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginVertical="4dp"
-        android:text="Bishkek"
+        android:id="@+id/tvCityText"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:textSize="28sp"
+        android:paddingTop="8dp"
+        android:paddingStart="12dp"
         android:textColor="@color/black"
-        android:textSize="20sp"/>
-
-
-</androidx.cardview.widget.CardView>
+        android:text="Bishkek"
+        />
+</LinearLayout>
