--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -51,7 +51,7 @@
                 android:textSize="20sp"
                 android:layout_margin="4dp"
                 android:layout_gravity="center_vertical"
-                android:text="15°" />
+                android:text="15°C" />
         </LinearLayout>
 
         <LinearLayout
@@ -72,7 +72,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginStart="6dp"
                 android:layout_gravity="center_vertical"
-                android:text="5°" />
+                android:text="5°C" />
         </LinearLayout>
 
             <LinearLayout
@@ -92,7 +92,8 @@
                     android:textSize="20sp"
                     android:layout_gravity="center_vertical"
                     android:singleLine="true"
-                    android:text="100%" />
+                    android:layout_marginStart="6dp"
+                    android:text="10%" />
             </LinearLayout>
             <TextView
                 android:id="@+id/tvDescription"
