--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/cities"
+        android:id="@+id/mainFragment"
+        android:title="Local"
+        android:icon="@drawable/ic_location"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/citiesFragment"
         android:title="Cities"
         android:icon="@drawable/ic_list"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/citiesSearchFragment"
+        android:title="Search"
+        android:icon="@drawable/ic_search"
         app:showAsAction="always"/>
 
 </menu>
