--- a/app/src/main/res/drawable/ic_umbrella.xml
+++ b/app/src/main/res/drawable/ic_umbrella.xml
@@ -1,18 +1,34 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="64dp"
-    android:height="64dp"
-    android:viewportWidth="64"
-    android:viewportHeight="64">
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
   <path
-      android:pathData="M32,5.79A24.32,24.32 0,0 0,7.84 27.27a1,1 0,0 0,1 1,1 1,0 0,0 0.75,-0.38 5.18,5.18 0,0 1,4.5 -2.73,5 5,0 0,1 5,5 1,1 0,0 0,2 0c0.11,-6.53 9.83,-6.53 9.94,0 0,0.35 -0.07,22.45 0.06,22.79A3.14,3.14 0,0 1,28 56.21a3,3 0,0 1,-3 -3,1 1,0 0,0 -2,0c0.15,6.79 10.32,6.46 9.94,-0.29 0.1,-0.3 0.06,-22.47 0.06,-22.79 0.12,-6.54 9.83,-6.53 10,0a1,1 0,0 0,2 0c-0.08,-5.06 7,-6.84 9.34,-2.38a1.1,1.1 0,0 0,0.88 0.52,1 1,0 0,0 1,-0.83A24.23,24.23 0,0 0,32 5.79Z"
-      android:fillColor="#0083ca"/>
+      android:pathData="M16,3L16,5"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/grey"
+      android:strokeLineCap="round"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M56.05,27.7C55.41,15.37 44.25,5.75 32,5.79S8.06,15.63 8.1,27.93a1,1 0,0 0,1.49 0c2.35,-4.56 9.5,-3 9.47,2.24a1,1 0,0 0,2 0c0.11,-6.53 9.83,-6.53 9.94,0 0,0.35 -0.09,22.45 0.06,22.79A3.14,3.14 0,0 1,28 56.21a3,3 0,0 1,-3 -3,1 1,0 0,0 -2,0c0.15,6.79 10.32,6.46 9.94,-0.29 0.11,-0.29 0.05,-22.47 0.06,-22.79a5,5 0,0 1,10 0,1 1,0 0,0 2,0c-0.08,-5.06 7,-6.84 9.34,-2.38A1,1 0,0 0,56.05 27.7ZM49.92,23.16a7,7 0,0 0,-6 3.39c-2.38,-4.43 -9.57,-4.43 -12,0 -2.37,-4.44 -9.57,-4.43 -11.94,0a7,7 0,0 0,-9.57 -2.39c5.94,-21.62 37.1,-21.61 43,0A7,7 0,0 0,49.92 23.16Z"/>
+      android:pathData="M16,18v8v0.5c0,1.38 -1.12,2.5 -2.5,2.5S11,27.88 11,26.5"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/grey"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M25.7,9.9c-1.18,0.63 -5.09,1.54 -4.23,3.33a1,1 0,0 0,1.39 0.29,16.33 16.33,0 0,1 3.5,-1.74A1,1 0,0 0,25.7 9.9Z"
-      android:fillColor="#fff"/>
+      android:pathData="M27,11c0,2.21 -1.79,4 -4,4s-4,-1.79 -4,-4s4,-8 4,-8S27,8.79 27,11z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/grey"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M18.68,14.38c-0.6,0.59 -1.6,1.5 -0.71,2.29s1.58,-0.3 2.13,-0.89C21,14.86 19.57,13.44 18.68,14.38Z"
-      android:fillColor="#fff"/>
+      android:pathData="M21.08,6.03C19.52,5.37 17.8,5 16,5C8.82,5 3,10.82 3,18h26c0,-2.45 -0.68,-4.75 -1.86,-6.71"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/grey"
+      android:strokeLineCap="round"/>
 </vector>
