--- a/app/src/main/res/drawable/ic_wind.xml
+++ b/app/src/main/res/drawable/ic_wind.xml
@@ -1,24 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="64dp"
-    android:height="64dp"
-    android:viewportWidth="64"
-    android:viewportHeight="64">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M32,12.7c-8.22,0.14 -8.21,12.36 0,12.5C40.22,25.06 40.21,12.84 32,12.7Z"
-      android:fillColor="#009ede"/>
-  <path
-      android:pathData="M51.16,19.63C43,19.77 43,32 51.16,32.13 59.38,32 59.38,19.77 51.16,19.63Z"
-      android:fillColor="#009ede"/>
-  <path
-      android:pathData="M43.66,38.47c-8.21,0.14 -8.21,12.36 0,12.5C51.88,50.82 51.88,38.6 43.66,38.47Z"
-      android:fillColor="#009ede"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M7.09,25.88H32c9.14,-0.24 9.14,-13.62 0,-13.86 -1.34,0 -5.36,0.84 -4.36,2.79A1,1 0,0 0,29 15a4.93,4.93 0,1 1,3 8.88H7.09A1,1 0,0 0,7.09 25.88Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M43.86,38.12H7.09a1,1 0,0 0,0 2H43.86a4.93,4.93 0,1 1,-3 8.88,1 1,0 0,0 -1.41,0.19c-1,2 3,2.79 4.36,2.79C53,51.74 53,38.36 43.86,38.12Z"/>
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M51,19.14c-1.33,0 -5.37,0.84 -4.36,2.78a1,1 0,0 0,1.4 0.2c7.46,-4.63 11.72,8.1 3,8.88H7.09a1,1 0,0 0,0 2H51a6.93,6.93 0,0 0,0 -13.86Z"/>
+      android:pathData="M9.59,4.59A2,2 0,1 1,11 8H2m10.59,11.41A2,2 0,1 0,14 16H2m15.73,-8.27A2.5,2.5 0,1 1,19.5 12H2"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="@color/moon_blue"
+      android:strokeLineCap="round"/>
 </vector>
